kubernetes/server-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: board-game-stat-tracker-server-dep
  namespace: bgst
spec:
  replicas: 1
  selector:
    matchLabels:
      app: board-game-stat-tracker-server
  template:
    metadata:
      labels:
        app: board-game-stat-tracker-server
    spec:
      containers:
        - name: board-game-stat-tracker-server-container
          image: codebras/board-game-stat-tracker-server:${GITHUB_RUN_ID} 
          ports:
            - containerPort: 8080
