kubernetes/client-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: board-game-stat-tracker-client-service
  namespace: bgst
spec:
  selector:
    app: board-game-stat-tracker-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
