kubernetes/server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: board-game-stat-tracker-server-service
  namespace: bgst
spec:
  selector:
    app: board-game-stat-tracker-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
