kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: board-game-stat-tracker-client-ingress
  namespace: bgst
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: bgst.duckdns.org # Replace with your DuckDNS domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: board-game-stat-tracker-client-service
                port:
                  number: 80
